# gtk4_opengl_transition

./: Peek_vid.webm  README.md  meson.build
data/resources/: background.glsl  cogs2.glsl  github.aeldemery.gtk4_opengl_transition.gresource.xml  meson.build  transition-linearblur.glsl  transition-wind.glsl
source/: Main.vala  MainWindow.vala  ShaderBin.vala  ShaderPaintable.vala  ShaderStack.vala  meson.build
source/lib/: ShaderBin.vala  ShaderStack.vala  meson.build  shaderlibrary.vala
source/widgets/: RippleBin.vala  TransitionStack.vala  WindStack.vala
